// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`init notifyAccountNotVerified() should dispatch a notification because the base email integration is not verified 1`] = `
Array [
  Object {
    "payload": Object {
      "allowHTML": true,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 0,
      "dismissible": false,
      "id": "account-not-verified-notification",
      "message": "Your email address is not verified. <span class=\\"text-primary\\">Click here to resend the verification email.</span>",
      "onClick": [Function],
      "position": "tc",
      "status": "warning",
      "style": "banner",
    },
    "type": "ADD_NOTIFICATION",
  },
]
`;

exports[`init notifyAccountNotVerified() should not do anything because the base email integration is verified 1`] = `Array []`;

exports[`init notifyDeprecatedTld() should dispatch a notification because the URL's TLD is \`.io\` 1`] = `
Array [
  Object {
    "payload": Object {
      "allowHTML": true,
      "buttons": Array [],
      "closeButton": false,
      "dismissAfter": 0,
      "dismissible": false,
      "id": "deprecated-tld-notification",
      "message": "We're now a dot-com 🎉 please update your helpdesk links and bookmarks to <span class=\\"text-primary\\">https://acme.gorgias.com/</span>. This message will be hidden after you login there.",
      "onClick": [Function],
      "position": "tc",
      "status": "warning",
      "style": "banner",
    },
    "type": "ADD_NOTIFICATION",
  },
]
`;

exports[`init notifyDeprecatedTld() should not do anything because the URL's TLD is not \`.io\` 1`] = `Array []`;

exports[`init toInitialStoreState() should return the expected store state 1`] = `
Object {
  "agents": Immutable.Map {
    "all": Immutable.List [
      Immutable.Map {
        "lastname": "Support",
        "meta": Immutable.Map {},
        "active": true,
        "bio": null,
        "deactivated_datetime": null,
        "name": "Acme Support",
        "external_id": "1",
        "created_datetime": "2020-10-20T14:57:22.993592+00:00",
        "country": null,
        "language": null,
        "timezone": "US/Pacific",
        "id": 1,
        "firstname": "Acme",
        "email": "hello@acme.gorgias.io",
        "roles": Immutable.List [
          Immutable.Map {
            "id": 7,
            "name": "admin",
          },
        ],
        "updated_datetime": "2020-10-20T14:57:22.995691+00:00",
      },
    ],
  },
  "billing": Immutable.Map {
    "plans": Immutable.Map {
      "advanced-monthly-usd-2": Immutable.Map {
        "cost_per_ticket": 0.14,
        "interval": "month",
        "public": true,
        "name": "Advanced",
        "trial_period_days": 7,
        "order": 3,
        "currency": "usd",
        "free_tickets": 6000,
        "limits": Immutable.Map {
          "messages": Immutable.Map {
            "default": 1000,
            "max": 1000,
            "min": 800,
          },
          "tickets": Immutable.Map {
            "default": 350,
            "max": 350,
            "min": 300,
          },
        },
        "amount": 75000,
        "integrations": 100,
      },
    },
  },
  "chats": Immutable.Map {
    "tickets": Immutable.List [
      Immutable.Map {
        "channel": "chat",
        "customer": Immutable.Map {
          "email": "marïe@gorgias.io",
          "id": 4,
          "name": "Marie Curie",
        },
        "id": 32,
        "is_unread": true,
        "last_message_datetime": "2020-10-20T06:06:28.223864",
      },
    ],
  },
  "currentAccount": Immutable.Map {
    "created_datetime": "2020-10-20T14:57:22.614970+00:00",
    "current_subscription": Immutable.Map {
      "plan": "pro-yearly-usd-2",
      "start_datetime": "2020-10-20T14:57:24+00:00",
      "status": "trialing",
      "trial_end_datetime": "2020-10-27T14:57:24+00:00",
      "trial_start_datetime": "2020-10-20T14:57:24+00:00",
    },
    "deactivated_datetime": null,
    "domain": "acme",
    "meta": Immutable.Map {
      "company_domain": "acme.com",
      "company_name": "Acme Corp",
    },
    "settings": Immutable.List [],
    "status": Immutable.Map {
      "notification": Immutable.Map {
        "message": "Your free trial is ending soon. Please add a payment method to continue using Gorgias.",
        "type": "warning",
      },
      "status": "active",
    },
    "user_id": 1,
  },
  "currentUser": Immutable.Map {
    "lastname": "Plugaru",
    "settings": Immutable.List [
      Immutable.Map {
        "data": Immutable.Map {
          "available": true,
          "show_macros": false,
        },
        "id": 2,
        "type": "preferences",
      },
    ],
    "meta": Immutable.Map {},
    "active": true,
    "bio": null,
    "deactivated_datetime": null,
    "name": "Alex Plugaru",
    "external_id": "2",
    "channels": Immutable.List [],
    "created_datetime": "2020-10-20T14:57:25.259768+00:00",
    "note": null,
    "country": "US",
    "language": "en",
    "timezone": "EST",
    "id": 2,
    "firstname": "Alex",
    "is_active": true,
    "email": "alex@gorgias.io",
    "roles": Immutable.List [
      Immutable.Map {
        "id": 7,
        "name": "admin",
      },
    ],
    "updated_datetime": "2020-10-20T14:57:25.261196+00:00",
  },
  "entities": Object {
    "sections": Object {
      "1": Object {
        "created_datetime": "2020-10-20T15:10:01.996156+00:00",
        "decoration": Object {
          "emoji": "😀",
        },
        "id": 1,
        "name": "test",
        "private": false,
        "updated_datetime": "2020-10-20T15:10:01.996168+00:00",
        "uri": "/api/view-sections/1/",
      },
    },
    "tags": Object {
      "4": Object {
        "created_datetime": "2020-10-20T14:57:28.155180+00:00",
        "decoration": null,
        "deleted_datetime": null,
        "description": null,
        "id": 4,
        "name": "refund accepted",
        "uri": "/api/tags/4/",
      },
    },
    "views": Object {
      "9": Object {
        "category": "system",
        "created_datetime": "2020-10-20T14:57:27.612323+00:00",
        "deactivated_datetime": null,
        "decoration": null,
        "display_order": 1,
        "fields": Array [
          "name",
          "email",
          "created",
          "updated",
        ],
        "filters": "eq(user.roles.name, \\"user\\")",
        "filters_ast": Object {},
        "group_by": null,
        "id": 9,
        "name": "All customers",
        "order_by": "updated_datetime",
        "order_dir": "desc",
        "search": null,
        "slug": "all-customers",
        "type": "customer-list",
        "uri": "/api/views/9/",
        "visibility": "public",
      },
    },
  },
  "integrations": Immutable.Map {
    "authentication": Immutable.Map {},
    "extra": Immutable.Map {
      "facebook": Immutable.Map {
        "max_account_ads": 100,
      },
      "gorgias_chat": Immutable.Map {
        "bundleUrl": "https://chat-bundle.test.gorgias.chat",
        "chatUrl": "chat-api.test.gorgias.chat",
        "wsUrl": "chat-ws.test.gorgias.chat",
      },
    },
    "integrations": Immutable.List [],
  },
  "schemas": Immutable.Map {
    "definitions": Immutable.Map {},
    "info": Immutable.Map {
      "description": "The new generation helpdesk",
      "title": "Gorgias",
      "version": "0.0.1",
    },
    "paths": Immutable.Map {},
    "swagger": "2.0",
  },
  "tags": Immutable.Map {
    "items": Immutable.List [
      Immutable.Map {
        "created_datetime": "2020-10-20T14:57:28.155180+00:00",
        "decoration": null,
        "deleted_datetime": null,
        "description": null,
        "id": 4,
        "name": "refund accepted",
        "uri": "/api/tags/4/",
      },
    ],
  },
  "teams": Immutable.Map {
    "all": Immutable.Map {},
  },
  "views": Immutable.Map {
    "active": Immutable.Map {},
    "counts": Immutable.Map {},
    "items": Immutable.List [
      Immutable.Map {
        "search": null,
        "order_by": "updated_datetime",
        "deactivated_datetime": null,
        "name": "All customers",
        "slug": "all-customers",
        "uri": "/api/views/9/",
        "decoration": null,
        "display_order": 1,
        "created_datetime": "2020-10-20T14:57:27.612323+00:00",
        "visibility": "public",
        "group_by": null,
        "fields": Immutable.List [
          "name",
          "email",
          "created",
          "updated",
        ],
        "type": "customer-list",
        "id": 9,
        "filters": "eq(user.roles.name, \\"user\\")",
        "order_dir": "desc",
        "filters_ast": Immutable.Map {},
        "category": "system",
      },
    ],
    "recent": Immutable.Map {
      "9": Immutable.Map {
        "inserted_datetime": "2020-10-28T09:23:35.294Z",
        "updated_datetime": "2020-10-28T09:23:35.294Z",
      },
    },
  },
}
`;
